--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,7 @@ button.btn-version {
 .box {
   background-color: #3d3d3d; 
   border-radius: 10px;
+  padding: 15px;
 }
 
 .wrap{
@@ -19,24 +20,24 @@ button.btn-version {
 }
 
 .action {
-  color: red;
+  color: white;
   font-size: 12px;
 }
 
 .box-top{
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
   background-color: #3d3d3d; 
   padding: 15px;
   border-radius: 10px 10px 0px 0px;
 }
 .box-bottom{
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
   background-color: #3d3d3d; 
   padding: 15px;
   border-radius: 0px 0px 10px 10px;
