--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-label.title{
+label.tiitle{
   font-size: 24px;
   font-weight: bold;
 }
@@ -12,7 +12,6 @@ button.btn-version {
 .box {
   background-color: #3d3d3d; 
   border-radius: 10px;
-  padding: 15px;
 }
 
 .wrap{
@@ -25,20 +24,10 @@ button.btn-version {
 }
 
 .box-top{
-  /* display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center; */
   background-color: #3d3d3d; 
-  padding: 15px;
   border-radius: 10px 10px 0px 0px;
 }
 .box-bottom{
-  /* display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center; */
   background-color: #3d3d3d; 
-  padding: 15px;
   border-radius: 0px 0px 10px 10px;
 }
